<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.login.add_device.AddDeviceFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/ivMachine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/machine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="84dp"
        />

    <TextView
        android:id="@+id/tvProfileCreated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_created"
        style="@style/Tittle"
        android:layout_marginTop="18dp"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/ivMachine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvInfoAddDevice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_add_device"
        style="@style/Body"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileCreated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnAddDevice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_next"
        android:text="@string/add_device"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>