<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".ui.extras.ResumeNewPillFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <ImageView
        android:id="@+id/ivIconCare"
        android:src="@drawable/ic_pills"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/tvWhoCare"
        android:text="@string/pill_name"
        style="@style/Tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ivIconCare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="8dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCareType"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvWhoCare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvFirstType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/finished"
                style="@style/Body"
                android:background="@color/gray"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="16dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvSecondType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                style="@style/Body"
                android:drawableLeft="@drawable/ic_calendar_b"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvSecondType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvThirdType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recharge"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_pills_b"
                app:layout_constraintTop_toBottomOf="@+id/tvSecondType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvThirdType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvFourthType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_instructions"
                style="@style/Body"
                android:drawableLeft="@drawable/ic_instructions"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvThirdType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvFourthType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvFifthType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change_icon"
                style="@style/Body"
                android:drawableLeft="@drawable/ic_edit"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvFourthType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvFifthType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_next"
                android:text="@string/save"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="24sp"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"
                android:padding="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>