<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".ui.extras.PillTypeFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <ImageView
        android:id="@+id/ivIconPills"
        android:src="@drawable/ic_pills"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/tvPillType"
        android:text="@string/pill_type"
        style="@style/Tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ivIconPills"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="8dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvPillType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvFirstPill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/first_pill_type_p"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstPill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvSecondPill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/second_pill_type_p"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_next"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstPill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvSecondPill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvThirdPill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/third_pill_type_p"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_next"
                app:layout_constraintTop_toBottomOf="@+id/tvSecondPill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvThirdPill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvFourthPill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/third_pill_type_p"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_next"
                app:layout_constraintTop_toBottomOf="@+id/tvSecondPill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvFourthPill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvFifthPill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fourth_pill_type_p"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_next"
                app:layout_constraintTop_toBottomOf="@+id/tvFourthPill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvFifthPill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvSixthPill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sixth_pill_type_p"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_next"
                app:layout_constraintTop_toBottomOf="@+id/tvFifthPill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvSixthPill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvSeventhPill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/seventh_pill_type_p"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_next"
                app:layout_constraintTop_toBottomOf="@+id/tvSixthPill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvSeventhPill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvEigthPill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/eigth_pill_type_p"
                style="@style/Body"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_next"
                app:layout_constraintTop_toBottomOf="@+id/tvSeventhPill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvEigthPill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>